# web-practice

./: .gitignore  Cargo.toml  LICENSE  README.md
tutor/: .env  Cargo.toml
tutor-db/: .env  Cargo.toml
tutor-db/src/iter5/: errors.rs
tutor-db/src/iter5/db_access/: course.rs  tutor.rs
tutor-db/src/iter5/dbscripts/: course.sql  tutor-course.sql
tutor-db/src/iter5/handlers/: course.rs  general.rs  tutor.rs
tutor-db/src/iter5/models/: course.rs  tutor.rs
tutor/src/server/: errors.rs  routes.rs  state.rs
tutor/src/server/db_access/: course.rs  tutor.rs
tutor/src/server/dbscripts/: tutor-course.sql
tutor/src/server/handlers/: course.rs  general.rs  tutor.rs
